--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,3 +26,5 @@ jobs:
         run: terraform  plan 
       - name: terraform apply
         run: terraform  apply  -auto-approve
+      - name: terraform show
+        run: terraform show
